--- a/make.conf
+++ b/make.conf
@@ -16,6 +16,7 @@ GENTOO_MIRRORS="https://mirror.yandex.ru/gentoo-distfiles/distfiles/ \
 https://gentoo-mirror.alexxy.name/distfiles/"
 PORTAGE_BINHOST="https://mirror.yandex.ru/gentoo-distfiles/releases/amd64/binpackages/23.0/x86-64/ \
 https://gentoo-mirror.alexxy.name/releases/amd64/binpackages/23.0/x86-64/"
+LINGUAS="en"
 
 # ===== USE =====
 USE="-gnome png jpeg json clang amd64 vulkan opengl alsa cli crypt iconv policykit ssl udev xorg X"
