--- a/make.conf
+++ b/make.conf
@@ -19,7 +19,7 @@ https://gentoo-mirror.alexxy.name/releases/amd64/binpackages/23.0/x86-64/"
 LINGUAS="en"
 
 # ===== USE =====
-USE="-gnome png jpeg json clang amd64 vulkan opengl alsa cli crypt iconv policykit ssl udev xorg X"
+USE="-gnome -kde dbus png jpeg pdf webp json policykit clang amd64 vulkan opengl alsa cli crypt iconv policykit ssl udev xorg X gtk3 gtk"
 
 # ===== Drivers and Devices =====
 VIDEO_CARDS="amdgpu"  
