--- a/make.conf
+++ b/make.conf
@@ -10,7 +10,7 @@ ACCEPT_KEYWORDS="amd64"
 ACCEPT_LICENSE="*"
 MAKEOPTS="-j4 -l5"  # Использует все ядра CPU
 FEATURES="x parallel-fetch parallel-install binpkg-logs sandbox" 
-EMERGE_DEFAULT_OPTS="--with-bdeps=y --getbinpkg"
+EMERGE_DEFAULT_OPTS="--ask --with-bdeps=y --getbinpkg"
 RUSTFLAGS="-C target-cpu=native"
 GENTOO_MIRRORS="https://mirror.yandex.ru/gentoo-distfiles/distfiles/ \
 https://gentoo-mirror.alexxy.name/distfiles/"
