--- a/make.conf
+++ b/make.conf
@@ -8,7 +8,7 @@ FFLAGS="${COMMON_FLAGS}"
 # ===== Portage setup =====
 ACCEPT_KEYWORDS="amd64"
 ACCEPT_LICENSE="*"
-MAKEOPTS="-j4 -l5"  # Использует все ядра CPU
+MAKEOPTS="-j4 -l5"
 FEATURES="parallel-fetch parallel-install binpkg-logs sandbox" 
 EMERGE_DEFAULT_OPTS="--ask --with-bdeps=y --getbinpkg"
 RUSTFLAGS="-C target-cpu=native"
@@ -19,7 +19,7 @@ https://gentoo-mirror.alexxy.name/releases/amd64/binpackages/23.0/x86-64/"
 LINGUAS="en"
 
 # ===== USE =====
-USE="-gnome -kde dbus png jpeg pdf webp json policykit clang amd64 unicode vulkan wifi opengl alsa cli crypt iconv policykit ssl udev xorg X gtk3 gtk"
+USE="-gnome -kde dbus png jpeg pdf webp json policykit amd64 unicode vulkan wifi opengl alsa cli crypt iconv policykit ssl udev xorg X"
 
 # ===== Drivers and Devices =====
 VIDEO_CARDS="amdgpu"  
