--- a/make.conf
+++ b/make.conf
@@ -29,4 +29,5 @@ INPUT_DEVICES="libinput"
 GRUB_PLATFORMS="pc"  
 GRUB_TARGET="i386-pc"
 #GRUB_PLATFORMS="efi-64"
+#GRUB_TARGET="x86_64-efi"
 # and run this to install grub on EFI system: grub-install --efi-directory=/efi
