--- a/make.conf
+++ b/make.conf
@@ -19,7 +19,7 @@ https://gentoo-mirror.alexxy.name/releases/amd64/binpackages/23.0/x86-64/"
 LINGUAS="en"
 
 # ===== USE =====
-USE="-gnome -kde dbus png jpeg pdf webp json policykit amd64 unicode vulkan wifi opengl alsa cli crypt iconv ssl udev xorg X curl"
+USE="-gnome -kde dbus png jpeg pdf webp json policykit amd64 unicode vulkan wifi opengl alsa cli crypt iconv ssl udev xorg X curl ssh"
 
 # ===== Drivers and Devices =====
 VIDEO_CARDS="amdgpu"  
